fix: :bug: using reverse proxy to load video

--- a/content/docs/fitter/demo.mdx
+++ b/content/docs/fitter/demo.mdx
@@ -15,7 +15,7 @@ import { TypeTable } from 'fumadocs-ui/components/type-table';
   style={{ maxWidth: '800px', height: 'auto' }}
   preload="metadata"
 >
-  <source src="http://img.wjsphy.top/demo.mp4" type="video/mp4" />
+  <source src="/api/proxy/video?url=http://img.wjsphy.top/demo.mp4" type="video/mp4" />
   您的浏览器不支持视频播放。
 </video>
 
